# ZCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lang/: analyze.cpp  exception.hpp  grammar.hpp  interpreter.hpp  typecheck.hpp
lang/expressions/: expression.cpp  expression.hpp  fundef.cpp  fundef.hpp  fundefs.cpp  fundefs.hpp  integer.cpp  integer.hpp  parse_ast.cpp  parse_ast.hpp  parse_error.hpp
lang/utils/: format.cpp  format.hpp
lang/values/: integer.cpp  integer.hpp  value.hpp
